update handlers and docs
